add storage backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <app-todos></app-todos>
+<input type="file" id="video" (change)="onFileSelected($event)" accept="video/*">
+<button (click)="handleClick()">upload video</button>
